# SnapTrain-100M

./: .gitignore  CMakeLists_manual.txt  CUSTOMOP.md  Genie.lib  README.md  SNAPDRAGON_TRAINING.md  bitnet_int4_training_step.onnx  check_dll.py  conclude_performance.py  generate_hello_bitnet_choc.py  generate_hello_graph.py  generate_int4_training_graph.py  generate_monster_full.py  generate_monster_graph.py  generate_q4_100m.py  generate_transformer_graph.py  hello_bitnet_choc.onnx  hello_train.onnx  input_x.raw  monster_20m_full_npu.onnx  monster_20m_train.onnx  monster_factory.py  npu_bridge.lib  npu_bridge_arm64.lib  npu_bridge_nosys.lib  npu_bridge_x64.lib  npu_factory.py  npu_factory_full.py  npu_trainer_bridge.cpp  npu_trainer_fast.cpp  npu_trainer_nosys.cpp  npu_trainer_simple.cpp  prepare_hello.py  prepare_test_data.py  prepare_transformer_data.py  prepare_wiki.py  q4_100m_train.onnx  qnn_bitnet_choc.cpp  qnn_bitnet_choc_net.json  qnn_hello_model.cpp  (+20 more)
build_manual/: binary_mock.cpp  bitnet_choc_engine.cpp  final_engine.cpp  final_engine_fixed.cpp  full_engine.cpp  hello_engine.cpp  monster_engine.cpp  q4_100m_engine.cpp  qnn_training_model.cpp  transformer_engine.cpp
test_npu/: input_list.txt  input_list_100.txt  input_list_100m.txt  input_list_100m_1.txt  input_list_100m_10.txt  input_list_5.txt  input_list_choc.txt  input_list_choc_1.txt  input_list_choc_100.txt  input_list_debug.txt  input_list_transformer.txt  lr.raw  qnn_bitnet_choc.lib  qnn_hello_model.lib  src.raw  (+16 more)
test_npu/TrainerApp/src/: CMakeLists.txt  QnnSampleApp.cpp  QnnSampleApp_training.cpp
(+24 files in other folders)
